[api] refactor grpc api (some google aips considered)
