# storage-service/internal/api/grpc/server.go
@@ -8,6 +8,7 @@ import (
 	"coinflow/coinflow-server/storage-service/internal/api/grpc/types"
 	"coinflow/coinflow-server/storage-service/internal/usecases"
 	"context"
+	"fmt"
 )
 
 type StorageServer struct {
@@ -23,7 +24,7 @@ func NewStorageServer(txService usecases.TransactionsService, cfg config.Service
 	}
 }
 
-func (s *StorageServer) GetTransaction(ctx context.Context, r *pb.GetTransactionRequest) (*pb.GetTransactionResponse, error) {
+func (s *StorageServer) GetTransaction(ctx context.Context, r *pb.GetTransactionRequest) (*pb.Transaction, error) {
 	reqObj, err := types.CreateGetTransactionRequestObject(ctx, r)
 	if err != nil {
 		return nil, grpcErr.CreateRequestObjectStatusError(err)
@@ -34,7 +35,7 @@ func (s *StorageServer) GetTransaction(ctx context.Context, r *pb.GetTransaction
 	    return nil, grpcErr.CreateResultStatusError(err, errorCodes)
 	}
 
-	resp, err := types.CreateGetTransactionResponse(tx)
+	resp, err := types.GetProtobufTxFromModel(tx)
 	if err != nil {
 		return nil, grpcErr.CreateResponseStatusError(err)
 	}
@@ -42,10 +43,17 @@ func (s *StorageServer) GetTransaction(ctx context.Context, r *pb.GetTransaction
 	return resp, nil
 }
 
-func (s *StorageServer) GetTransactionsInPeriod(ctx context.Context, r *pb.GetTransactionsInPeriodRequest) (*pb.GetTransactionsInPeriodResponse, error) {
-	reqObj, err := types.CreateGetTransactionsInPeriodRequestObject(ctx, r)
+func (s *StorageServer) ListTransactions(ctx context.Context, r *pb.ListTransactionsRequest) (*pb.ListTransactionsResponse, error) {
+	reqObj, err := types.CreateListTransactionsRequestObject(ctx, r)
 	if err != nil {
 		return nil, grpcErr.CreateRequestObjectStatusError(err)
+	}
+
+	if reqObj.UserId.String() != r.UserId {
+		return nil, grpcErr.CreateResultStatusError(
+			fmt.Errorf("ListTransactions: %w", ErrorUserIdsDontMatch),
+			errorCodes,
+		)
 	}
 
 	txs, err := s.txService.GetTransactionsInPeriod(ctx, reqObj.UserId, reqObj.Begin, reqObj.End)
@@ -53,7 +61,7 @@ func (s *StorageServer) GetTransactionsInPeriod(ctx context.Context, r *pb.GetTr
 	    return nil, grpcErr.CreateResultStatusError(err, errorCodes)
 	}
 
-	resp, err := types.CreateGetTransactionsInPeriodResponse(txs)
+	resp, err := types.CreateListTransactionsResponse(txs)
 	if err != nil {
 		return nil, grpcErr.CreateResponseStatusError(err)
 	}
@@ -61,18 +69,30 @@ func (s *StorageServer) GetTransactionsInPeriod(ctx context.Context, r *pb.GetTr
 	return resp, nil
 }
 
-func (s *StorageServer) PostTransaction(ctx context.Context, r *pb.PostTransactionRequest) (*pb.PostTransactionResponse, error) {
-	reqObj, err := types.CreatePostTransactionRequestObject(ctx, r)
+func (s *StorageServer) CreateTransaction(ctx context.Context, r *pb.CreateTransactionRequest) (*pb.Transaction, error) {
+	reqObj, err := types.MakeCreateTransactionRequestObject(ctx, r)
 	if err != nil {
 		return nil, grpcErr.CreateRequestObjectStatusError(err)
 	}
 
-	txId, err := s.txService.PostTransaction(ctx, reqObj.Tx, reqObj.WithAutoCategory)
+	if reqObj.Tx.UserId.String() != r.UserId {
+		return nil, grpcErr.CreateResultStatusError(
+			fmt.Errorf("CreateTransaction: %w", ErrorUserIdsDontMatch),
+			errorCodes,
+		)
+	}
+
+	tx, err := s.txService.PostTransaction(ctx, reqObj.Tx, reqObj.WithAutoCategory)
 	if err != nil {
 	    return nil, grpcErr.CreateResultStatusError(err, errorCodes)
 	}
 
 	pkgGrpc.SetResponseCode(ctx, s.cfg.HttpCodeHeaderName, 201)
 
-	return &pb.PostTransactionResponse{TxId: txId.String()}, nil
+	resp, err := types.GetProtobufTxFromModel(tx)
+	if err != nil {
+		return nil, grpcErr.CreateResponseStatusError(err)
+	}
+
+	return resp, nil
 }
