# swagger/docs/swagger.json
@@ -1,17 +1,15 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API Gateway for Coinflow service",
         "title": "Coinflow API",
         "contact": {},
-        "version": "1.0"
+        "version": "0.1.0"
     },
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
         "/auth/login": {
             "post": {
-                "description": "login and get tokens",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,10 +19,10 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Login",
+                "summary": "Login and get pair of tokens",
                 "parameters": [
                     {
-                        "description": "request object",
+                        "description": "Login and password",
                         "name": "reqObj",
                         "in": "body",
                         "required": true,
@@ -63,7 +61,6 @@
         },
         "/auth/refresh": {
             "post": {
-                "description": "refresh and get new tokens",
                 "consumes": [
                     "application/json"
                 ],
@@ -73,10 +70,10 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Refresh",
+                "summary": "Refresh and get new pair of tokens",
                 "parameters": [
                     {
-                        "description": "request object",
+                        "description": "Refresh token",
                         "name": "reqObj",
                         "in": "body",
                         "required": true,
@@ -115,7 +112,6 @@
         },
         "/auth/register": {
             "post": {
-                "description": "register new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -125,10 +121,10 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Register",
+                "summary": "Register new user",
                 "parameters": [
                     {
-                        "description": "request object",
+                        "description": "User data",
                         "name": "reqObj",
                         "in": "body",
                         "required": true,
@@ -167,7 +163,7 @@
         },
         "/commit": {
             "post": {
-                "description": "commit transaction",
+                "description": "Transaction's type and category must be one of allowed values (view docs/VARS.md on github for values list).",
                 "consumes": [
                     "application/json"
                 ],
@@ -177,16 +173,29 @@
                 "tags": [
                     "transactions"
                 ],
-                "summary": "PostTransaction",
+                "summary": "Commit transaction",
                 "parameters": [
                     {
-                        "description": "transaction",
+                        "description": "Transaction data",
                         "name": "tx",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/types.PostTransactionRequestObject"
+                            "$ref": "#/definitions/models.Transaction"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Creator id",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Defines if category should be auto-detected by description (default is false)",
+                        "name": "with_auto_category",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -219,14 +228,14 @@
         },
         "/transaction/id/{tx_id}": {
             "get": {
-                "description": "get transaction by id",
+                "description": "WARNING: Viewing other user's transactions is not allowed.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "transactions"
                 ],
-                "summary": "GetTransaction",
+                "summary": "Get transaction by id",
                 "parameters": [
                     {
                         "type": "string",
@@ -277,8 +286,8 @@
             }
         },
         "/transaction/period": {
-            "post": {
-                "description": "get transactions in period between begin and end",
+            "get": {
+                "description": "Time should be presented in RFC3339 format.",
                 "consumes": [
                     "application/json"
                 ],
@@ -288,16 +297,40 @@
                 "tags": [
                     "transactions"
                 ],
-                "summary": "GetTransactionsInPeriod",
+                "summary": "Get transactions in period between begin and end",
                 "parameters": [
                     {
-                        "description": "Request object",
-                        "name": "reqObj",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.GetTransactionsInPeriodRequestObject"
-                        }
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Begin time in RFC3339 format",
+                        "name": "begin_time",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "End time in RFC3339 format",
+                        "name": "end_time",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Requested page size",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Requested page token",
+                        "name": "page_token",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -315,6 +348,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "type": "string"
                         }
@@ -423,20 +462,6 @@
                 }
             }
         },
-        "types.GetTransactionsInPeriodRequestObject": {
-            "type": "object",
-            "properties": {
-                "begin": {
-                    "type": "string"
-                },
-                "end": {
-                    "type": "string"
-                },
-                "with_summary": {
-                    "type": "boolean"
-                }
-            }
-        },
         "types.LoginRequestObject": {
             "type": "object",
             "properties": {
@@ -445,17 +470,6 @@
                 },
                 "password": {
                     "type": "string"
-                }
-            }
-        },
-        "types.PostTransactionRequestObject": {
-            "type": "object",
-            "properties": {
-                "tx": {
-                    "$ref": "#/definitions/models.Transaction"
-                },
-                "with_auto_category": {
-                    "type": "boolean"
                 }
             }
         },
